[tool.poetry]
name = "histoapp_tools"
version = "0.2.0"
description = "Tools to interact with histo.app."
authors = ["Johannes Lotz <johannes.lotz@mevis.fraunhofer.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
requests = "^2.25.1"
Pillow = "^8.1.0"
tqdm = "^4.56.2"
pyvips = "^2.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
